# cortex

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: azure-spot-vm-self-heal.yml  deploy.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_invite_tokens.py  a3f9e2b1c847_rag_schema.py  c1d2e3f4a5b6_add_file_data_to_documents.py  d4e5f6a7b8c9_add_document_chunks.py  e5f6a7b8c9d0_add_workspaces_and_multi_tenancy.py  f1a2b3c4d5e6_add_usage_limits.py  f58fd8dee6d4_initial_schema.py  g2h3i4j5k6l7_add_collections.py  h3i4j5k6l7m8_add_superadmin_role.py
backend/app/: deps.py  main.py
backend/app/core/: chunking.py  config.py  database.py  embeddings.py  html_sanitizer.py  pdf.py  rag.py  security.py
backend/app/models/: __init__.py  chunk.py  collection.py  document.py  invite_token.py  user.py  workspace.py
backend/app/routers/: __init__.py  auth.py  collections.py  documents.py  superadmin.py  users.py  workspaces.py
backend/app/schemas/: auth.py  collection.py  document.py  user.py  workspace.py
backend/tests/: test_collections.py
docs/: deployment-azure-vm.md  development.md
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: DocumentForm.jsx  ProtectedRoute.jsx
nginx/: nginx.conf
(+25 files in other folders)
